Fix/Page Builder adjust height of input elements for better alignment

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -367,7 +367,7 @@
   min-width: 4rem;
   padding-right: 1rem;
   padding-left: 1rem;
-  height: 2.2rem;
+  height: 2rem;
   box-shadow: 0 0 0 10px oklch(86.9% 0.005 56.366);
   background: oklch(86.9% 0.005 56.366);
 }
